--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -19,3 +19,8 @@ spec:
         image: shanmukesh55/imgserviceserver:latest
         ports:
         - containerPort: 80
+        resources:
+          limits:
+            cpu: 500m
+          requests:
+            cpu: 200m
